<resources>
    <string name="app_name">Popular Movies</string>

    <string name="welcome">Welcome to Movies World\nPlease SignIn to your google account</string>
    <string name="user_welcome">Welcome </string>
    <string name="app_open">Enter the Movies World</string>
    <string name="signout">Sign Out</string>
    <string name="sort_popular">Sort by Popularity</string>
    <string name="sort_rating">Sort by Top Rating</string>
    <string name="favourites">Show favourites</string>
    <string name="connection_failed">Failed to connect to your Google account</string>
    <string name="trailers">Trailers :</string>
    <string name="reviews">Reviews :</string>

    <string name="loading">Loading....</string>

    <string name="reviews_waiting">Loading the Reviews</string>
    <string name="reviews_not_found">There is no reviews found for this show :(</string>
    <string name="trials_not_found">There is trials for this show :(</string>

    <string name="default_widget_text">This will show the list of your favourite movies when you
        add one to your favourite</string>

    <string name="favorite_movies_intent_key">FAVORITE_MOVIES_INTENT_KEY</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="favorite_button_description">
        Clicking on this star shape will either add movie to your favorites or remove it.
    </string>
    <string name="no_internet_connection">No Internet Connection Opening the Favourites</string>
    <string name="no_connecetion_load_favorites">No Internet connection/nLoading the Favourites</string>
    <string name="no_favorites">There is no Favourites</string>
    <string name="sort_type_show">show</string>
    <string name="get_method">GET</string>
    <string name="sort_type_popular">popular</string>
    <string name="sort_type_top_rated">top_rated</string>
</resources>
