<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_titile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTeal500"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/big_size"
            android:textColor="@color/colorWhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_weight="40"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_size"/>

                <TextView
                    android:id="@+id/movie_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_size"/>

                <Button
                    android:id="@+id/movie_fav_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/fav_selector" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/normal_size"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>

        <TextView
            android:text="@string/trailers"
            android:textSize="@dimen/normal_size"
            android:textStyle="bold"
            android:paddingTop="@dimen/trailer_vertical_margain"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/movie_trials_progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/trials_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trials_not_found"
                android:textSize="@dimen/normal_size"
                android:textAlignment="center"
                android:visibility="gone"
                android:textColor="@color/colorPrimaryDark"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_trials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="none">
            </android.support.v7.widget.RecyclerView>
        </FrameLayout>



        <TextView
            android:text="@string/reviews"
            android:textSize="@dimen/normal_size"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/movie_reviews_progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/review_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews_not_found"
                android:textSize="@dimen/normal_size"
                android:textAlignment="center"
                android:visibility="gone"
                android:textColor="@color/colorPrimaryDark"/>
            <com.mes.udacity.capstonepopularmovies.utils.SizedListView
                android:id="@+id/movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:scrollbars="none">

            </com.mes.udacity.capstonepopularmovies.utils.SizedListView>
        </FrameLayout>


    </LinearLayout>
</ScrollView>